<resources>
    <string name="app_name">Reminder</string>
    <string name="action_settings">Settings</string>
    <string name="years">years</string>
    <string name="contacts">CONTACTS</string>
    <string name="reminders">REMINDERS</string>
    <string name="notes">NOTES</string>
    <string name="insert_time">Insert time</string>
    <string name="insert_date">Insert date</string>
    <string name="insert_name">Insert name</string>
    <string name="insert_description">Insert description</string>
    <string name="enabled_alarm">Enable alarm</string>
    <string name="birthday">Birthday</string>
    <string name="reminder">Reminder</string>
    <string name="has_birthday">has birthday</string>
    <string name="date_time_before">Can\'t setup alarm in past.</string>
    <string name="default_time_notification">Birthday notification time</string>
    <string name="ringtone_picker">Select tone</string>
    <string name="save">Save settings</string>
    <string name="birthday_alerts">Enable Birthday alerts</string>
    <string name="vibrate_on_alerts">Enable vibration</string>
    <string name="light_on_alerts">Enable notification light</string>
    <string name="invalid_ringtone">Invalid ringtone</string>
    <string name="notification_sound">Notification sound</string>
    <string name="call">Call</string>
    <string name="message">Message</string>
    <string name="happy_birthday">Happy birthday to you!</string>
</resources>
