<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification_sound"
            android:padding="10dp"/>
        <Switch
            android:id="@+id/use_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp" />
        <Button
            android:id="@+id/ringtone_picker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ringtone_picker"
            android:layout_gravity="center_vertical"
            android:padding="5dp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birthday_alerts"
            android:padding="10dp"/>
        <Switch
            android:id="@+id/use_contacts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="5dp" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="left"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/default_time_notification"
            android:padding="10dp"/>
        <EditText
            android:id="@+id/defaultContactAlert"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:focusable="false"
            android:hint="@string/insert_time"
            android:layout_gravity="center_vertical"
            android:inputType="text"
            android:padding="10dp"/>
    </LinearLayout>

</LinearLayout>