<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">

        <EditText
            android:id="@+id/new_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_time"
            android:focusable="false"
            android:inputType="text" />

        <EditText
            android:id="@+id/new_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_date"
            android:focusable="false"
            android:inputType="text" />

        <EditText
            android:id="@+id/new_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_name"
            android:maxLength="@integer/name_length" />

        <EditText
            android:id="@+id/new_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/insert_description" />
    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|left"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_done_white_24dp" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/remove"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        android:src="@drawable/ic_delete_white_24dp" />
</android.support.design.widget.CoordinatorLayout>